--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vite-plugin-solid": "^2.11.8"
   },
   "dependencies": {
+    "@formisch/solid": "^0.7.5",
     "solid-js": "^1.9.5",
     "valibot": "^1.2.0"
   }
