--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ app.config.timestamp_*.js
 
 # dependencies
 /node_modules
+/demo/*/node_modules
+/packages/*/node_modules
 
 # IDEs and editors
 /.idea
