Remove tsx, require Node 24 with native type stripping
- Remove tsx dependency, use node --experimental-strip-types
- Set engines to node >=24 across all packages
- Move plasticine.config.ts to demo root
- CLI bin now points to .ts source directly
- demo/demo1 installs @plasticine/cli as proper dependency

--- a/demo/demo1/package.json
+++ b/demo/demo1/package.json
@@ -4,13 +4,19 @@
   "private": true,
   "description": "Plasticine CMS demo project",
   "type": "module",
+  "engines": {
+    "node": ">=24"
+  },
   "scripts": {
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "migrate": "plasticine migrate",
+    "migrate:dry": "plasticine migrate --dry-run"
   },
   "devDependencies": {
+    "@plasticine/cli": "workspace:*",
     "solid-devtools": "^0.34.3",
     "typescript": "^5.7.2",
     "vite": "^7.1.4",
