--- a/package.json
+++ b/package.json
@@ -4,13 +4,8 @@
   "private": true,
   "description": "Git-based CMS with schema migrations",
   "type": "module",
-  "scripts": {
-    "cli": "tsx packages/cli/src/index.ts",
-    "migrate": "tsx packages/cli/src/index.ts migrate",
-    "migrate:dry": "tsx packages/cli/src/index.ts migrate --dry-run"
+  "engines": {
+    "node": ">=24"
   },
-  "license": "MIT",
-  "devDependencies": {
-    "tsx": "^4.21.0"
-  }
+  "license": "MIT"
 }
