--- a/packages/workflows/action.yml
+++ b/packages/workflows/action.yml
@@ -2,12 +2,16 @@ name: 'Plasticine Migrate'
 description: 'Migrate content to latest schema and commit changes'
 
 inputs:
-  config:
-    description: 'Path to plasticine.config.ts'
+  working-directory:
+    description: 'Directory to run migrate from'
     required: false
-    default: './src/plasticine.config.ts'
+    default: '.'
+  config:
+    description: 'Path to plasticine.config.ts (relative to working-directory)'
+    required: false
+    default: './plasticine.config.ts'
   content:
-    description: 'Path to content directory'
+    description: 'Path to content directory (relative to working-directory)'
     required: false
     default: './content'
   pnpm-version:
@@ -17,7 +21,7 @@ inputs:
   node-version:
     description: 'Node.js version to use'
     required: false
-    default: '22'
+    default: '24'
   auto-commit:
     description: 'Automatically commit migrated content'
     required: false
@@ -48,13 +52,15 @@ runs:
 
     - name: Run migrations
       shell: bash
-      run: pnpm migrate -c ${{ inputs.config }} -d ${{ inputs.content }}
+      working-directory: ${{ inputs.working-directory }}
+      run: pnpm migrate
 
     - name: Check for changes
       id: changes
       shell: bash
       run: |
-        if [[ -n $(git status --porcelain ${{ inputs.content }}) ]]; then
+        CONTENT_PATH="${{ inputs.working-directory }}/${{ inputs.content }}"
+        if [[ -n $(git status --porcelain "$CONTENT_PATH") ]]; then
           echo "has_changes=true" >> $GITHUB_OUTPUT
         else
           echo "has_changes=false" >> $GITHUB_OUTPUT
@@ -64,8 +70,9 @@ runs:
       if: steps.changes.outputs.has_changes == 'true' && inputs.auto-commit == 'true'
       shell: bash
       run: |
+        CONTENT_PATH="${{ inputs.working-directory }}/${{ inputs.content }}"
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
-        git add ${{ inputs.content }}
+        git add "$CONTENT_PATH"
         git commit -m "Migrate content to latest schema"
         git push
