Add media config and fix editor data loading
- Add media.path config for upload base path
- Add per-field path option for image/file fields
- Fix Editor showing empty form (use keyed Show)
- Simplify workflow action to use single root input

--- a/packages/workflows/src/migrate.yml
+++ b/packages/workflows/src/migrate.yml
@@ -19,5 +19,4 @@ jobs:
       - name: Migrate content
         uses: ./packages/workflows
         with:
-          config: demo/demo1/src/plasticine.config.ts
-          content: demo/demo1/content
+          root: demo/demo1
