--- a/packages/workflows/action.yml
+++ b/packages/workflows/action.yml
@@ -2,18 +2,10 @@ name: 'Plasticine Migrate'
 description: 'Migrate content to latest schema and commit changes'
 
 inputs:
-  working-directory:
-    description: 'Directory to run migrate from'
+  root:
+    description: 'Root directory of the Plasticine project'
     required: false
     default: '.'
-  config:
-    description: 'Path to plasticine.config.ts (relative to working-directory)'
-    required: false
-    default: './plasticine.config.ts'
-  content:
-    description: 'Path to content directory (relative to working-directory)'
-    required: false
-    default: './content'
   pnpm-version:
     description: 'pnpm version to use'
     required: false
@@ -52,15 +44,14 @@ runs:
 
     - name: Run migrations
       shell: bash
-      working-directory: ${{ inputs.working-directory }}
+      working-directory: ${{ inputs.root }}
       run: pnpm migrate
 
     - name: Check for changes
       id: changes
       shell: bash
       run: |
-        CONTENT_PATH="${{ inputs.working-directory }}/${{ inputs.content }}"
-        if [[ -n $(git status --porcelain "$CONTENT_PATH") ]]; then
+        if [[ -n $(git status --porcelain "${{ inputs.root }}/content") ]]; then
           echo "has_changes=true" >> $GITHUB_OUTPUT
         else
           echo "has_changes=false" >> $GITHUB_OUTPUT
@@ -70,9 +61,8 @@ runs:
       if: steps.changes.outputs.has_changes == 'true' && inputs.auto-commit == 'true'
       shell: bash
       run: |
-        CONTENT_PATH="${{ inputs.working-directory }}/${{ inputs.content }}"
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
-        git add "$CONTENT_PATH"
+        git add "${{ inputs.root }}/content"
         git commit -m "Migrate content to latest schema"
         git push
