fix: improve client API type inference and add Infer helper
- Add VersionedSchemaBase interface for looser type constraints
- Add Infer<T> helper type for clean schema type extraction
- Fix PlasticineConfig generic variance issues across components
- Add typecheck scripts to root and demo package.json
- Update demo App.tsx to use client API with Infer type

--- a/demo/demo1/package.json
+++ b/demo/demo1/package.json
@@ -15,7 +15,8 @@
     "serve": "vite preview",
     "admin": "vite --config plasticine/vite.config.ts",
     "migrate": "plasticine migrate",
-    "migrate:dry": "plasticine migrate --dry-run"
+    "migrate:dry": "plasticine migrate --dry-run",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@plasticine/cli": "workspace:*",
