--- a/packages/plasticine/package.json
+++ b/packages/plasticine/package.json
@@ -10,6 +10,9 @@
     "./store": "./src/store.tsx",
     "./styles.css": "./src/styles.css"
   },
+  "scripts": {
+    "typecheck": "tsc --noEmit"
+  },
   "peerDependencies": {
     "solid-js": "^1.9.0",
     "valibot": "^1.0.0"
@@ -17,5 +20,8 @@
   "dependencies": {
     "@formisch/solid": "^0.7.5",
     "@solidjs/router": "^0.15.4"
+  },
+  "devDependencies": {
+    "typescript": "^5.7.2"
   }
 }
