refactor: simplify demo setup with single router
- Move config.ts to demo root
- Use @solidjs/router with /admin route for CMS
- Remove separate plasticine folder and vite config
- Single build for both app and admin

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,10 +30,6 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Build main app
+      - name: Build demo
         working-directory: demo/demo1
         run: pnpm build
-
-      - name: Build admin
-        working-directory: demo/demo1
-        run: pnpm build:admin
