--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,10 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main # or the branch you want to trigger the deployment from
+      - main
+
+permissions:
+  contents: write
 
 jobs:
   build-and-deploy:
