chore: copy index.html to 404.html for SPA routing

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,9 @@ jobs:
         working-directory: demo/demo1
         run: pnpm build
 
+      - name: Copy index.html to 404.html for SPA routing
+        run: cp demo/demo1/dist/index.html demo/demo1/dist/404.html
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
